// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntriesCollection should render connected component 1`] = `
<DocumentFragment>
  <mock-entries
    collectionname="Pages"
    collections="Map { \\"name\\": \\"pages\\", \\"label\\": \\"Pages\\", \\"folder\\": \\"src/pages\\" }"
    cursor="[object Object]"
    entries="List [ Map { \\"slug\\": \\"index\\", \\"path\\": \\"src/pages/index.md\\", \\"data\\": Map { \\"title\\": \\"Root\\" } }, Map { \\"slug\\": \\"dir1/index\\", \\"path\\": \\"src/pages/dir1/index.md\\", \\"data\\": Map { \\"title\\": \\"File 1\\" } }, Map { \\"slug\\": \\"dir2/index\\", \\"path\\": \\"src/pages/dir2/index.md\\", \\"data\\": Map { \\"title\\": \\"File 2\\" } } ]"
    isfetching="false"
  />
</DocumentFragment>
`;

exports[`EntriesCollection should render show only immediate children for nested collection 1`] = `
<DocumentFragment>
  <mock-entries
    collectionname="Pages"
    collections="Map { \\"name\\": \\"pages\\", \\"label\\": \\"Pages\\", \\"folder\\": \\"src/pages\\", \\"nested\\": Map { \\"depth\\": 10, \\"subfolders\\": false } }"
    cursor="[object Object]"
    entries="List [ Map { \\"slug\\": \\"index\\", \\"path\\": \\"src/pages/index.md\\", \\"data\\": Map { \\"title\\": \\"Root\\" } } ]"
    isfetching="false"
  />
</DocumentFragment>
`;

exports[`EntriesCollection should render with applied filter term for nested collections 1`] = `
<DocumentFragment>
  <mock-entries
    collectionname="Pages"
    collections="Map { \\"name\\": \\"pages\\", \\"label\\": \\"Pages\\", \\"folder\\": \\"src/pages\\", \\"nested\\": Map { \\"depth\\": 10, \\"subfolders\\": false } }"
    cursor="[object Object]"
    entries="List [ Map { \\"slug\\": \\"dir3/dir4/index\\", \\"path\\": \\"src/pages/dir3/dir4/index.md\\", \\"data\\": Map { \\"title\\": \\"File 4\\" } } ]"
    isfetching="false"
  />
</DocumentFragment>
`;

exports[`EntriesCollection should render with entries 1`] = `
<DocumentFragment>
  <mock-entries
    collectionname="Pages"
    collections="Map { \\"name\\": \\"pages\\", \\"label\\": \\"Pages\\", \\"folder\\": \\"src/pages\\" }"
    cursor="[object Object]"
    entries="List [ Map { \\"slug\\": \\"index\\" } ]"
    isfetching="false"
  />
</DocumentFragment>
`;
